# taskparts

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  FindTASKPARTS.cmake  LICENSE  README.md  cmake.nix  debug.nix  default.nix  opencilk.nix  shell.nix
benchmark/: BFS.cpp  Makefile  Makefile_benchmark  benchmark.hpp  bfs.cilk.cpp  bfs.cpp  bfs.hpp  bfs.serial.cpp  bignumadd.cilk.cpp  bignumadd.cpp  bignumadd.hpp  bignumadd.serial.cpp  cilk.hpp  classify.cilk.cpp  classify.hpp  common.hpp  comparisonsort.hpp  convert_graph.cpp  debug.nix  decision_tree_c45.cpp  delaunay.cilk.cpp  delaunay.cpp  delaunay.hpp  delaunay.serial.cpp  development.cpp  fib.cilk.cpp  fib.cpp  fib.serial.cpp  fib_manualfiber.cpp  fib_nativeforkjoin.cpp  fib_nativeforkjoin.hpp  fib_oracleguided.cpp  fib_serial.serial.cpp  filter.cpp  frontierseg.hpp  gen_rollforward.cpp  gen_rollforward.sh  graph.hpp  graph_color.cpp  grep.cilk.cpp  (+131 more)
benchmark/flexibench/: elastic.py  main.py  shell.nix  taskparts.py
benchmark/hbcompilation/: Makefile  sum_array.cpp
benchmark/parlay/: Makefile  bellmanford.cilk.cpp  bellmanford.cpp  betweennesscentrality.cilk.cpp  betweennesscentrality.cpp  bfs.cilk.cpp  bfs.cpp  bfsligra.cilk.cpp  bfsligra.cpp  bigintadd.cilk.cpp  bigintadd.cpp  bigintadd.hpp  bignumadd.cpp  bignumadd.hpp  btwcentrality.cilk.cpp  btwcentrality.cpp  bucketeddijkstra.cilk.cpp  bucketeddijkstra.cpp  cartesiantree.cilk.cpp  cartesiantree.cpp  cg.cilk.cpp  cg.hpp  cg.serial.cpp  classify.cpp  classify.hpp  common.hpp  comparisonsort.hpp  cyclecount.cilk.cpp  cyclecount.cpp  dedup.cilk.cpp  dedup.cpp  dedup.hpp  dedup.serial.cpp  delaunay.cilk.cpp  delaunay.cpp  fft.cilk.cpp  fft.cpp  filterkruskal.cilk.cpp  filterkruskal.cpp  granularity.cpp  (+75 more)
benchmark/script/: benchmark_run.py  benchmark_run_example_1.json  benchmark_run_example_2.json  benchmark_run_example_3.json  benchmark_run_schema.json  elastic.py  parameter.py  shell.nix  taskparts_benchmark_run.py  taskparts_benchmark_run_example1.json  test.opt  test_benchmark_run.py  test_parameter.py
benchmark/script/processing/: ingest.py  latex.py  main.py  model.py  view.py
benchmark/tool/: barplot.py  benchmark.py  benchmark_run_series_ex1.json  benchmark_run_series_schema.json  benchmark_schema.json  elastic.py  flexibench.rkt  parameter.py  parameter_schema.json  plot.py  run_benchmarks.py  shell.nix  table.py  taskparts.py  test.opt  test_barplot.py  test_benchmark.py  test_parameter.py  test_plot.py
benchmark/tpal/: Makefile  floyd_warshall.cpp  floyd_warshall.heartbeat.cpp  granularity.cpp  granularity.heartbeat.cpp  mandelbrot.cpp  mandelbrot.heartbeat.cpp  rollforward++  spmv.cpp  spmv.heartbeat.cpp  srad.cpp  srad.heartbeat.cpp  sum_array.cpp  sum_array.heartbeat.cpp  sum_array_lazy.cpp  sum_tree.cpp  sum_tree.heartbeat.cpp  sum_tree.hpp  tpal++
cmake/: FindHWLOC.cmake
example/: fib1.hpp  fib2.hpp  fib_manualfiber.cpp  fib_manualfiber.hpp  fib_nativefj.hpp  fib_nativeforkjoin.cpp  fib_nativeforkjoin.hpp  fib_oracleguided.hpp  fib_par.hpp  fib_seq.hpp  fib_sequential.hpp  mixed.hpp
include/taskparts/: abp.hpp  aligned.hpp  atomic.hpp  benchmark.hpp  chaselev.hpp  cmdline.hpp  combtree.hpp  defaults.hpp  diagnostics.hpp  elastic.hpp  fiber.hpp  fixedcapacity.hpp  hash.hpp  logging.hpp  machine.hpp  nativeforkjoin.hpp  oracleguided.hpp  perworker.hpp  rollforward.hpp  scheduler.hpp  snzi.hpp  stats.hpp  taskparts.hpp  taskparts_internal.hpp  timing.hpp  tpalrts.hpp  workstealing.hpp  ywra.hpp
include/taskparts/arm64/: context.hpp
include/taskparts/darwin/: aligned.hpp  spinlock.hpp
include/taskparts/posix/: aligned.hpp  diagnostics.hpp  machine.hpp  minworker.hpp  perworkerid.hpp  rollforward.hpp  semaphore.hpp  spinlock.hpp  steadyclock.hpp  tpalrts.hpp
include/taskparts/x64/: context.hpp
src/: Makefile  debug.nix  development.cpp  fib.cpp  fib_nativeforkjoin.hpp  fib_serial.hpp  taskparts.cpp
test/: test_perworker.cpp  test_scheduler.cpp
